[gd_scene load_steps=2 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.5
margin_right = 35.5

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 99.0
margin_bottom = 14.0
text = "Language:"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 99.0
margin_bottom = 38.0
text = "English"
items = [ "English", null, false, 0, null, "PortugÃªs", null, false, 1, null ]
selected = 0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 42.0
margin_right = 99.0
margin_bottom = 56.0
text = "Difficulty:"

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 99.0
margin_bottom = 80.0
text = "Easy"
items = [ "Easy", null, false, 0, null, "Normal", null, false, 1, null, "Hard", null, false, 2, null ]
selected = 0

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_top = 84.0
margin_right = 99.0
margin_bottom = 104.0
text = "Back to Menu"

[connection signal="item_selected" from="VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="VBoxContainer/OptionButton2" to="." method="_on_OptionButton2_item_selected"]
[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
